# py-sapient-proto

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: generate.py
src/sapient_msg/: proto_options_pb2.pyi
src/sapient_msg/bsi_flex_335_v2_0/: alert_ack_pb2.py  alert_ack_pb2.pyi  alert_pb2.py  alert_pb2.pyi  associated_detection_pb2.pyi  associated_file_pb2.pyi  detection_report_pb2.pyi  error_pb2.py  error_pb2.pyi  follow_pb2.py  follow_pb2.pyi  location_pb2.pyi  range_bearing_pb2.pyi  registration_ack_pb2.py  registration_ack_pb2.pyi  registration_pb2.py  registration_pb2.pyi  sapient_message_pb2.py  sapient_message_pb2.pyi  status_report_pb2.py  status_report_pb2.pyi  task_ack_pb2.py  task_ack_pb2.pyi  task_pb2.py  task_pb2.pyi  velocity_pb2.pyi
tests/: test_roundtrip.py
